# project-orchestra

./: .env.example  .gitignore  AGENTS.md  Project_Orchestra_Design_Notes.md  Project_Orchestra_Diagrams.md  Project_Orchestra_Framework.docx  Project_Orchestra_Implementation_Plan.md  Project_Orchestra_Startup_Master_Plan.md  Project_Orchestra_Technical_Spec.md  README.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
backend/: Dockerfile  alembic.ini  cloudrun-service.yaml  pyproject.toml  requirements-discoveryengine.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_charters_packets.py  0003_worker_profiles.py  0004_lifecycle_tables.py  0005_external_auth.py  0006_matcher_chat.py  0007_spec_workflow_summary.py  0008_spec_snapshots.py  0009_notifications.py  0010_order_ledger_state.py  (+6 more)
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_admin.py  test_admin_ops.py  test_ai_gateway.py  test_amendments.py  test_architect.py  test_auth.py  test_chat_scope.py  test_chat_sessions_list.py  test_chat_stream.py  test_discovery_engine.py  test_disputes_pm.py  test_email_observability.py  test_health.py  test_intent_flow.py  test_ledger.py  test_matcher.py  test_notifications.py  test_orders_list.py  test_payments_ledger.py  test_preference_chat.py  test_pricing_undo.py  test_product_smoke.py  test_qa_judge.py  test_rag.py  test_reliability.py  test_scope_guard.py  test_spine.py  test_task_lifecycle.py  test_task_packet.py  test_timers.py  test_worker_stats.py  test_workers.py  test_ws_live.py
(+176 files in other folders)
